[gd_scene load_steps=12 format=3 uid="uid://bfkkj5n365aen"]

[ext_resource type="Script" path="res://scripts/cinematic outro.gd" id="1_dl072"]
[ext_resource type="Script" path="res://scripts/ParallaxLayerscroll.gd" id="2_my61e"]
[ext_resource type="Texture2D" uid="uid://yek5vl1uhhx4" path="res://sprites/cinematic/outro 1 layer 1.png" id="3_0yego"]
[ext_resource type="Texture2D" uid="uid://xrsyc8lbl3eq" path="res://sprites/cinematic/outro 1 layer 2.png" id="4_reyoo"]
[ext_resource type="Texture2D" uid="uid://byyo23wj6wtum" path="res://sprites/cinematic/outro 1 layer 3.png" id="5_h320c"]
[ext_resource type="Texture2D" uid="uid://b2rg0dpnsmq81" path="res://sprites/cinematic/outro 2 layer 1.png" id="6_jbug0"]
[ext_resource type="Texture2D" uid="uid://dnb251vly80h3" path="res://sprites/cinematic/outro 2 layer 2.png" id="7_7dwef"]
[ext_resource type="Texture2D" uid="uid://cmtnbwpod82j6" path="res://sprites/cinematic/outro 2 layer 3.png" id="8_rdf4r"]
[ext_resource type="Texture2D" uid="uid://mmyu344fjhy0" path="res://sprites/cinematic/outro 3 layer 1.png" id="9_8gj3q"]
[ext_resource type="Texture2D" uid="uid://bm86ct284ut0v" path="res://sprites/cinematic/outro 3 layer 2.png" id="10_6ard8"]
[ext_resource type="Texture2D" uid="uid://cwk3dtj5auahk" path="res://sprites/cinematic/outro 3 layer 3.png" id="11_yqy0k"]

[node name="CinematicIntro" type="Node2D"]
script = ExtResource("1_dl072")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = -10.0

[node name="Outro1Layer1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(4, 5)
texture = ExtResource("3_0yego")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = -2.0

[node name="Outro1Layer2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(4, 5)
texture = ExtResource("4_reyoo")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = 1.0

[node name="Outro1Layer3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(4, 5)
texture = ExtResource("5_h320c")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = -10.0

[node name="Outro2Layer1" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2(4, 5)
texture = ExtResource("6_jbug0")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = -2.0

[node name="Outro2Layer2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2(4, 5)
texture = ExtResource("7_7dwef")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = -1.0

[node name="Outro2Layer3" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2(4, 5)
texture = ExtResource("8_rdf4r")

[node name="ParallaxBackground3" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground3"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = -10.0

[node name="Outro3Layer1" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer"]
position = Vector2(4, 5)
texture = ExtResource("9_8gj3q")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground3"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = 3.0

[node name="Outro3Layer2" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer2"]
position = Vector2(4, 5)
texture = ExtResource("10_6ard8")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground3"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("2_my61e")
SPEED = 2.0

[node name="Outro3Layer3" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer3"]
position = Vector2(-1, 13)
texture = ExtResource("11_yqy0k")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
